--- a/src/redatam-converter/RedatamConverter.csproj
+++ b/src/redatam-converter/RedatamConverter.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
+    <Compile Include="Exporters\MetadataExporter.cs" />
     <Compile Include="Exporters\IExporter.cs" />
     <Compile Include="Exporters\CSVDoc.cs" />
     <Compile Include="Exporters\CSVExporter.cs" />
