--- a/src/redatam-converter/RedatamConverter.csproj
+++ b/src/redatam-converter/RedatamConverter.csproj
@@ -23,15 +23,18 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
+    <DebugType>full</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\..\bin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>favicon.ico</ApplicationIcon>
@@ -93,6 +96,7 @@
     <EmbeddedResource Include="cStatus.resx">
       <DependentUpon>cStatus.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -105,7 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\redatam-lib\RedatamLib.csproj">
-      <Project>{EF9372FE-A75A-474D-ACEE-5BE0C7D0BD23}</Project>
+      <Project>{ef9372fe-a75a-474d-acee-5be0c7d0bd23}</Project>
       <Name>RedatamLib</Name>
     </ProjectReference>
   </ItemGroup>
